--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -221,7 +221,12 @@ jobs:
             ISSUE_GUIDELINES.md
             PR_GUIDELINES.md
             README.md
-
+            .nojekyll
+            yarn.lock
+            docs/docusaurus.config.ts
+            docs/sidebar*
+            CNAME
+            
       - name: List all changed unauthorized files
         if: steps.changed-unauth-files.outputs.any_changed == 'true' || steps.changed-unauth-files.outputs.any_deleted == 'true'
         env:
