--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -93,21 +93,84 @@ jobs:
           echo "Error: Close this PR and try again."          
           exit 1
 
-  #       - name: Echo the GitHub environment for troubleshooting
-  #         run: echo "$GITHUB_CONTEXT"
-  #       - name: Echo the GitHub context for troubleshooting
-  #         run: echo "${{ toJSON(github) }}"
-  #       - name: setup python
-  #         uses: actions/setup-python@v5
-  #       - name: Granting permission to documentationcheck.py
-  #         run: chmod +x ./.github/workflows/documentationcheck.py
-  #       - name: execute py script
-  #         # For more information on the GitHub context used for the "--repository" flag used by this script visit:
-  #         # https://docs.github.com/en/actions/learn-github-actions/contexts
-  #         run: |
-  #           git branch
-  #           pip install GitPython
-  #           python ./.github/workflows/documentationcheck.py --repository ${{github.repository}} --merge_branch_name ${{github.ref_name}}
+
+  Branch-check:
+    if: ${{ github.actor != 'dependabot[bot]' && !contains(github.event.pull_request.labels.*.name, 'ignore-sensitive-files-pr') }}
+    name: "Base branch check"
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Check if base branch is develop-postgres"
+        if: github.event.pull_request.base.ref != 'develop-postgres'
+        run: |
+          echo "PR is not against develop-postgres branch. Please refer PR_GUIDELINES.md"
+          echo "Error: Close this PR and try again."
+          exit 1
+
+  Check-Sensitive-Files:
+    if: ${{ github.actor != 'dependabot[bot]' && !contains(github.event.pull_request.labels.*.name, 'ignore-sensitive-files-pr') }}
+    name: Checks if sensitive files have been changed without authorization
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Get Changed Unauthorized files
+        id: changed-unauth-files
+        uses: tj-actions/changed-files@v45
+        with:
+          files: |
+            CODE_OF_CONDUCT.md
+            CODE_STYLE.md
+            CONTRIBUTING.md
+            DOCUMENTATION.md
+            INSTALLATION.md
+            ISSUE_GUIDELINES.md
+            PR_GUIDELINES.md
+            README.md
+            CODEOWNERS
+            LICENSE  
+            .github/**
+            analysis_options.yaml
+            pubspec.yaml
+            pubspec.lock
+            lib/main.dart
+      - name: List all changed unauthorized files
+        if: steps.changed-unauth-files.outputs.any_changed == 'true' || steps.changed-unauth-files.outputs.any_deleted == 'true'
+        env:
+          CHANGED_UNAUTH_FILES: ${{ steps.changed-unauth-files.outputs.all_changed_files }}
+        run: |
+          for file in ${CHANGED_UNAUTH_FILES}; do
+            echo "$file is unauthorized to change/delete"
+          done
+          echo "To override this, apply the 'ignore-sensitive-files-pr' label"
+          exit 1
+
+  Count-Changed-Files:
+    if: ${{ github.actor != 'dependabot[bot]' }}
+    name: Checks if number of files changed is acceptable
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v45
+
+      - name: Echo number of changed files
+        env:
+          CHANGED_FILES_COUNT: ${{ steps.changed-files.outputs.all_changed_files_count }}
+        run: |
+          echo "Number of files changed: $CHANGED_FILES_COUNT"
+      - name: Check if the number of changed files is less than 100
+        if: steps.changed-files.outputs.all_changed_files_count > 100
+        env:
+          CHANGED_FILES_COUNT: ${{ steps.changed-files.outputs.all_changed_files_count }}
+        run: |
+          echo "Error: Too many files (greater than 100) changed in the pull request."
+          echo "Possible issues:"
+          echo "- Contributor may be merging into an incorrect branch."
+          echo "- Source branch may be incorrect please use develop as source branch."
+          exit 1
 
   Flutter-Testing:
     name: Testing codebase
@@ -173,81 +236,40 @@ jobs:
       - name: Building for ios
         run: flutter build ios --release --no-codesign
 
-  Branch-check:
-    if: ${{ github.actor != 'dependabot[bot]' && !contains(github.event.pull_request.labels.*.name, 'ignore-sensitive-files-pr') }}
-    name: "Base branch check"
+  Test-Docusaurus-Deployment:
+    name: Test Deployment to https://docs-mobile.talawa.io
     runs-on: ubuntu-latest
+    needs: [iOS-Build, Android-Build]
+    # Run only if the develop-postgres branch and not dependabot    
+    if: ${{ github.actor != 'dependabot[bot]' && github.event.pull_request.base.ref == 'develop-postgres' }}
     steps:
-      - name: "Check if base branch is develop-postgres"
-        if: github.event.pull_request.base.ref != 'develop-postgres'
-        run: |
-          echo "PR is not against develop-postgres branch. Please refer PR_GUIDELINES.md"
-          echo "Error: Close this PR and try again."
-          exit 1
-
-  Check-Sensitive-Files:
-    if: ${{ github.actor != 'dependabot[bot]' && !contains(github.event.pull_request.labels.*.name, 'ignore-sensitive-files-pr') }}
-    name: Checks if sensitive files have been changed without authorization
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Get Changed Unauthorized files
-        id: changed-unauth-files
-        uses: tj-actions/changed-files@v45
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          files: |
-            CODE_OF_CONDUCT.md
-            CODE_STYLE.md
-            CONTRIBUTING.md
-            DOCUMENTATION.md
-            INSTALLATION.md
-            ISSUE_GUIDELINES.md
-            PR_GUIDELINES.md
-            README.md
-            CODEOWNERS
-            LICENSE  
-            .github/**
-            analysis_options.yaml
-            pubspec.yaml
-            pubspec.lock
-            lib/main.dart
-      - name: List all changed unauthorized files
-        if: steps.changed-unauth-files.outputs.any_changed == 'true' || steps.changed-unauth-files.outputs.any_deleted == 'true'
-        env:
-          CHANGED_UNAUTH_FILES: ${{ steps.changed-unauth-files.outputs.all_changed_files }}
-        run: |
-          for file in ${CHANGED_UNAUTH_FILES}; do
-            echo "$file is unauthorized to change/delete"
-          done
-          echo "To override this, apply the 'ignore-sensitive-files-pr' label"
-          exit 1
+          node-version: 22
+          cache: yarn
+          cache-dependency-path: 'docs/'
+      # Run Docusaurus in the ./docs directory
+      - name: Install dependencies
+        working-directory: ./docs
+        run: yarn install --frozen-lockfile
+      - name: Test building the website
+        working-directory: ./docs
+        run: yarn build
 
-  Count-Changed-Files:
-    if: ${{ github.actor != 'dependabot[bot]' }}
-    name: Checks if number of files changed is acceptable
+  Validate-Coderabbit:
+    name: Validate CodeRabbit Approval
     runs-on: ubuntu-latest
+    if: github.actor != 'dependabot[bot]'
+    needs: [Test-Docusaurus-Deployment]
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v4
-
-      - name: Get changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v45
-
-      - name: Echo number of changed files
-        env:
-          CHANGED_FILES_COUNT: ${{ steps.changed-files.outputs.all_changed_files_count }}
+      - name: Validate CodeRabbit.ai Approval
         run: |
-          echo "Number of files changed: $CHANGED_FILES_COUNT"
-      - name: Check if the number of changed files is less than 100
-        if: steps.changed-files.outputs.all_changed_files_count > 100
+          chmod +x $GITHUB_WORKSPACE/.github/workflows/scripts/validate-coderabbit.sh
+          $GITHUB_WORKSPACE/.github/workflows/scripts/validate-coderabbit.sh
         env:
-          CHANGED_FILES_COUNT: ${{ steps.changed-files.outputs.all_changed_files_count }}
-        run: |
-          echo "Error: Too many files (greater than 100) changed in the pull request."
-          echo "Possible issues:"
-          echo "- Contributor may be merging into an incorrect branch."
-          echo "- Source branch may be incorrect please use develop as source branch."
-          exit 1
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
