--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,8 @@ dev_dependencies:
   json_serializable: ^6.8.0
   lint: ^2.3.0
 
+  mockito: ^5.4.0 
+
   mocktail_image_network: ^1.2.0
   talawa_lint:
     path: talawa_lint/
