--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -49,18 +49,6 @@ jobs:
         run: cd talawa_lint && flutter pub get && cd ..
       - name: Running pub get to fetch dependencies
         run: flutter pub get
-      - name: Check and commit pubspec.lock changes
-        run: |
-          if [[ $(git status --porcelain pubspec.lock) ]]; then
-            echo "Changes detected in pubspec.lock. Auto-committing updates."
-            git config user.name "github-actions[bot]"
-            git config user.email "github-actions[bot]@users.noreply.github.com"
-            git add pubspec.lock
-            git commit -m "Automated update of pubspec.lock"
-            git push
-          else
-            echo "No changes in pubspec.lock."
-          fi
       - name: Checking for correct formatting of code
         run: dart format --set-exit-if-changed .
       - name: setup python
@@ -70,6 +58,7 @@ jobs:
       - name: Run check_ignore
         run: |
           git branch
+          git stash push -m lock_file pubspec.lock || echo "Nothing to stash"
           git checkout develop
           git pull
           git branch
