--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -48,14 +48,14 @@ jobs:
         run: flutter pub get
       - name: Checking for correct formatting of code
         run: dart format --set-exit-if-changed .
-      - name: Count lines of code in each file
-        run: chmod +x ./.github/workflows/countline.py
-      - name: Running count lines
-        run: ./.github/workflows/countline.py --exclude_directories test/ --exclude_files lib/custom_painters/talawa_logo.dart lib/custom_painters/language_icon.dart lib/custom_painters/whatsapp_logo.dart lib/utils/queries.dart lib/view_model/after_auth_view_models/profile_view_models/profile_page_view_model.dart lib/view_model/pre_auth_view_models/select_organization_view_model.dart lib/views/after_auth_screens/profile/profile_page.dart lib/view_model/main_screen_view_model.dart lib/views/after_auth_screens/events/create_event_page.dart lib/views/after_auth_screens/org_info_screen.dart lib/views/after_auth_screens/events/manage_volunteer_group.dart lib/views/after_auth_screens/events/create_agenda_item_page.dart lib/views/after_auth_screens/events/edit_agenda_item_page.dart lib/utils/event_queries.dart
       - name: setup python
         uses: actions/setup-python@v5
+      - name: Count lines of code in each file
+        run: chmod +x ./.github/workflows/scripts/countline.py
+      - name: Running count lines
+        run: ./.github/workflows/scripts/countline.py --exclude_directories test/ --exclude_files lib/custom_painters/talawa_logo.dart lib/custom_painters/language_icon.dart lib/custom_painters/whatsapp_logo.dart lib/utils/queries.dart lib/view_model/after_auth_view_models/profile_view_models/profile_page_view_model.dart lib/view_model/pre_auth_view_models/select_organization_view_model.dart lib/views/after_auth_screens/profile/profile_page.dart lib/view_model/main_screen_view_model.dart lib/views/after_auth_screens/events/create_event_page.dart lib/views/after_auth_screens/org_info_screen.dart lib/views/after_auth_screens/events/manage_volunteer_group.dart lib/views/after_auth_screens/events/create_agenda_item_page.dart lib/views/after_auth_screens/events/edit_agenda_item_page.dart lib/utils/event_queries.dart
       - name: Check for presence of ignore directives corresponding to custom lints
-        run: chmod +x ./.github/workflows/check_ignore.py
+        run: chmod +x ./.github/workflows/scripts/check_ignore.py
       - name: Run check_ignore
         run: |
           git branch
@@ -67,11 +67,11 @@ jobs:
           git diff --name-only develop-postgres..HEAD
           git checkout temp_branch
           pip install GitPython
-          python ./.github/workflows/check_ignore.py --repository ${{github.repository}} --merge_branch_name ${{github.head_ref}}
+          python ./.github/workflows/scripts/check_ignore.py --repository ${{github.repository}} --merge_branch_name ${{github.head_ref}}
       - name: Compare translation files
         run: |
-          chmod +x .github/workflows/compare_translations.py
-          python .github/workflows/compare_translations.py --directory lang
+          chmod +x .github/workflows/scripts/compare_translations.py
+          python .github/workflows/scripts/compare_translations.py --directory lang
       - name: Analysing codebase for default linting
         run: flutter analyze --no-pub
       - name: Analysing codebase for custom linting
@@ -84,7 +84,6 @@ jobs:
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             echo "$file was changed"
           done
-
       - name: Check if the source and target branches are different
         if: ${{ github.event.pull_request.base.ref == github.event.pull_request.head.ref }}
         run: |
@@ -175,7 +174,7 @@ jobs:
   Flutter-Testing:
     name: Testing codebase
     runs-on: ubuntu-latest
-    needs: Flutter-Codebase-Check
+    needs: [Flutter-Codebase-Check, Python-Compliance]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -248,7 +247,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x' 
+          node-version: "20.x"
       - name: Install dependencies
         working-directory: ./docs
         run: npm install
@@ -272,3 +271,53 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
           GITHUB_REPOSITORY: ${{ github.repository }}
+
+Python-Compliance:
+  name: Check Python Code Style
+  runs-on: ubuntu-latest
+  needs: [Code-Quality-Checks]
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
+
+    - name: Cache pip packages
+      uses: actions/cache@v4
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
+    - name: Install dependencies
+      run: |
+        python3 -m venv venv
+        source venv/bin/activate
+        python -m pip install --upgrade pip
+        pip install -r .github/workflows/requirements.txt
+
+    - name: Run Black Formatter Check
+      run: |
+        source venv/bin/activate
+        black --check .
+
+    - name: Run Flake8 Linter
+      run: |
+        source venv/bin/activate
+        flake8 --docstring-convention google --ignore E402,E722,E203,F401,W503 .github
+
+    - name: Run pydocstyle
+      run: |
+        source venv/bin/activate
+        pydocstyle --convention=google --add-ignore=D415,D205 .github
+
+    - name: Run docstring compliance check
+      run: |
+        source venv/bin/activate
+        python .github/workflows/scripts/check_docstrings.py --directories .github
