--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -24,24 +24,35 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    #needs: PR-Greeting
     steps:
       - uses: actions/checkout@v4
         with:
-          # ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/setup-java@v4
         with:
-          distribution: "zulu" # See 'Supported distributions' for available options
+          distribution: "zulu"
           java-version: "17.0"
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.27.3"
-          channel: "stable" # or: 'beta', 'dev' or 'master'
-      - name: Set default branch.
+          channel: "stable"
+      - name: Set default branch
         run: git remote set-head origin --auto
-        shell: bash
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+      - name: Get changed files
+        id: changed-files
+        run: |
+          git fetch origin ${{ github.base_ref }}
+          git diff --name-only origin/${{ github.base_ref }}...HEAD > changed_files.txt
+          echo "all_changed_files=$(cat changed_files.txt | jq -R -s -c 'split("\n") | map(select(. != ""))')" >> $GITHUB_OUTPUT
+          echo "all_changed_files_count=$(wc -l < changed_files.txt | tr -d ' ')" >> $GITHUB_OUTPUT
+      - name: List all changed files
+        run: |
+          echo "${{ steps.changed-files.outputs.all_changed_files }}" | jq -r '.[]' | while read -r file; do
+            echo "$file was changed"
+          done
       - name: Running pub get in talawa_lint
         run: cd talawa_lint && flutter pub get && cd ..
       - name: Running pub get to fetch dependencies
@@ -54,7 +65,7 @@ jobs:
         run: chmod +x ./.github/workflows/scripts/countline.py
       - name: Running count lines
         run: ./.github/workflows/scripts/countline.py --exclude_directories test/ --exclude_files lib/custom_painters/talawa_logo.dart lib/custom_painters/language_icon.dart lib/custom_painters/whatsapp_logo.dart lib/utils/queries.dart lib/view_model/after_auth_view_models/profile_view_models/profile_page_view_model.dart lib/view_model/pre_auth_view_models/select_organization_view_model.dart lib/views/after_auth_screens/profile/profile_page.dart lib/view_model/main_screen_view_model.dart lib/views/after_auth_screens/events/create_event_page.dart lib/views/after_auth_screens/org_info_screen.dart lib/views/after_auth_screens/events/manage_volunteer_group.dart lib/views/after_auth_screens/events/create_agenda_item_page.dart lib/views/after_auth_screens/events/edit_agenda_item_page.dart lib/utils/event_queries.dart
-      - name: Check for presence of ignore directives corresponding to custom lints
+      - name: Check for presence of ignore directives
         run: chmod +x ./.github/workflows/scripts/check_ignore.py
       - name: Run check_ignore
         run: |
@@ -76,21 +87,12 @@ jobs:
         run: flutter analyze --no-pub
       - name: Analysing codebase for custom linting
         run: dart run custom_lint
-      - name: Changed Files
-        id: changed-files
-        uses: tj-actions/changed-files@v45
-      - name: List all changed files
-        run: |
-          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-            echo "$file was changed"
-          done
-      - name: Check if the source and target branches are different
+      - name: Check if branches are different
         if: ${{ github.event.pull_request.base.ref == github.event.pull_request.head.ref }}
         run: |
           echo "Source Branch ${{ github.event.pull_request.head.ref }}"
           echo "Target Branch ${{ github.event.pull_request.base.ref }}"
-          echo "Error: Source and Target Branches are the same. Please ensure they are different."
-          echo "Error: Close this PR and try again."          
+          echo "Error: Source and Target Branches are the same"
           exit 1
 
   Branch-check:
@@ -98,79 +100,104 @@ jobs:
     name: "Base branch check"
     runs-on: ubuntu-latest
     steps:
-      - name: "Check if base branch is develop-postgres"
+      - name: Check base branch
         if: github.event.pull_request.base.ref != 'develop-postgres'
         run: |
-          echo "PR is not against develop-postgres branch. Please refer PR_GUIDELINES.md"
-          echo "Error: Close this PR and try again."
+          echo "PR is not against develop-postgres branch"
           exit 1
 
   Check-Sensitive-Files:
     if: ${{ github.actor != 'dependabot[bot]' && !contains(github.event.pull_request.labels.*.name, 'ignore-sensitive-files-pr') }}
-    name: Checks if sensitive files have been changed without authorization
+    name: Check sensitive files
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Get Changed Unauthorized files
-        id: changed-unauth-files
-        uses: tj-actions/changed-files@v45
         with:
-          files: |
-            CODE_OF_CONDUCT.md
-            CODE_STYLE.md
-            CONTRIBUTING.md
-            DOCUMENTATION.md
-            INSTALLATION.md
-            ISSUE_GUIDELINES.md
-            PR_GUIDELINES.md
-            README.md
-            CODEOWNERS
-            LICENSE  
-            .github/**
-            analysis_options.yaml
-            pubspec.yaml
-            pubspec.lock
-            lib/main.dart
-      - name: List all changed unauthorized files
-        if: steps.changed-unauth-files.outputs.any_changed == 'true' || steps.changed-unauth-files.outputs.any_deleted == 'true'
-        env:
-          CHANGED_UNAUTH_FILES: ${{ steps.changed-unauth-files.outputs.all_changed_files }}
+          fetch-depth: 0
+      - name: Get changed sensitive files
+        id: changed-unauth-files
         run: |
-          for file in ${CHANGED_UNAUTH_FILES}; do
-            echo "$file is unauthorized to change/delete"
+          git fetch origin ${{ github.base_ref }}
+          git diff --name-only origin/${{ github.base_ref }}...HEAD > changed_files.txt
+          git diff --name-only --diff-filter=D origin/${{ github.base_ref }}...HEAD > deleted_files.txt
+
+          sensitive_files=(
+            "CODE_OF_CONDUCT.md"
+            "CODE_STYLE.md"
+            "CONTRIBUTING.md"
+            "DOCUMENTATION.md"
+            "INSTALLATION.md"
+            "ISSUE_GUIDELINES.md"
+            "PR_GUIDELINES.md"
+            "README.md"
+            "CODEOWNERS"
+            "LICENSE"  
+            ".github/**"
+            "analysis_options.yaml"
+            "pubspec.yaml"
+            "pubspec.lock"
+            "lib/main.dart"
+          )
+
+          any_changed=false
+          any_deleted=false
+          changed_files_list=()
+
+          while IFS= read -r file; do
+            for pattern in "${sensitive_files[@]}"; do
+              if [[ "$file" == $pattern ]]; then
+                any_changed=true
+                changed_files_list+=("$file")
+                break
+              fi
+            done
+          done < changed_files.txt
+
+          while IFS= read -r file; do
+            for pattern in "${sensitive_files[@]}"; do
+              if [[ "$file" == $pattern ]]; then
+                any_deleted=true
+                changed_files_list+=("$file")
+                break
+              fi
+            done
+          done < deleted_files.txt
+
+          echo "any_changed=$any_changed" >> $GITHUB_OUTPUT
+          echo "any_deleted=$any_deleted" >> $GITHUB_OUTPUT
+          echo "all_changed_files=$(printf '%s\n' "${changed_files_list[@]}" | jq -R -s -c 'split("\n") | map(select(. != ""))')" >> $GITHUB_OUTPUT
+      - name: List changed unauthorized files
+        if: ${{ steps.changed-unauth-files.outputs.any_changed == 'true' || steps.changed-unauth-files.outputs.any_deleted == 'true' }}
+        run: |
+          echo "${{ steps.changed-unauth-files.outputs.all_changed_files }}" | jq -r '.[]' | while read -r file; do
+            echo "$file is unauthorized"
           done
-          echo "To override this, apply the 'ignore-sensitive-files-pr' label"
+          echo "Apply 'ignore-sensitive-files-pr' label to override"
           exit 1
 
   Count-Changed-Files:
     if: ${{ github.actor != 'dependabot[bot]' }}
-    name: Checks if number of files changed is acceptable
+    name: Check changed files count
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Get changed files
+        with:
+          fetch-depth: 0
+      - name: Get changed files count
         id: changed-files
-        uses: tj-actions/changed-files@v45
-
-      - name: Echo number of changed files
-        env:
-          CHANGED_FILES_COUNT: ${{ steps.changed-files.outputs.all_changed_files_count }}
         run: |
-          echo "Number of files changed: $CHANGED_FILES_COUNT"
-      - name: Check if the number of changed files is less than 100
+          git fetch origin ${{ github.base_ref }}
+          git diff --name-only origin/${{ github.base_ref }}...HEAD > changed_files.txt
+          echo "all_changed_files_count=$(wc -l < changed_files.txt | tr -d ' ')" >> $GITHUB_OUTPUT
+      - name: Check file count
         if: steps.changed-files.outputs.all_changed_files_count > 100
-        env:
-          CHANGED_FILES_COUNT: ${{ steps.changed-files.outputs.all_changed_files_count }}
         run: |
-          echo "Error: Too many files (greater than 100) changed in the pull request."
-          echo "Possible issues:"
-          echo "- Contributor may be merging into an incorrect branch."
-          echo "- Source branch may be incorrect please use develop-postgres as source branch."
+          echo "Too many files changed (${{ steps.changed-files.outputs.all_changed_files_count }})"
           exit 1
 
+  # Remaining jobs remain unchanged as they don't use changed-files action
   Flutter-Testing:
     name: Testing codebase
     runs-on: ubuntu-latest
@@ -179,50 +206,46 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
-          distribution: "zulu" # See 'Supported distributions' for available options
+          distribution: "zulu"
           java-version: "17.0"
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.27.3"
-          channel: "stable" # or: 'beta', 'dev' or 'master'
-      - name: Running pub get to fetch dependencies
+          channel: "stable"
+      - name: Running pub get
         run: flutter pub get
       - name: Codebase testing
         run: flutter test --coverage
-      - name: Present and upload coverage to Codecov as ${{env.CODECOV_UNIQUE_NAME}}
+      - name: Upload coverage
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          verbose: true
-          fail_ci_if_error: false
           name: "${{env.CODECOV_UNIQUE_NAME}}"
-      - name: Test acceptable level of code coverage
+      - name: Test coverage
         uses: VeryGoodOpenSource/very_good_coverage@v3
         with:
           path: "./coverage/lcov.info"
           min_coverage: 92.0
 
   Android-Build:
-    name: Testing build for android
+    name: Android build
     runs-on: ubuntu-latest
     needs: [Flutter-Testing]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
-          distribution: "zulu" # See 'Supported distributions' for available options
+          distribution: "zulu"
           java-version: "17.0"
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.27.3"
-          channel: "stable" # or: 'beta', 'dev' or 'master'
-      - name: Running pub get to fetch dependencies
-        run: flutter pub get
-      - name: Building for android
+          channel: "stable"
+      - name: Build APK
         run: flutter build apk
 
   iOS-Build:
-    name: Testing build for iOS
+    name: iOS build
     runs-on: macos-latest
     needs: [Flutter-Testing]
     steps:
@@ -230,40 +253,35 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.27.3"
-          channel: "stable" # or: 'beta', 'dev' or 'master'
-          architecture: x64
-      - name: Building for ios
+          channel: "stable"
+      - name: Build iOS
         run: flutter build ios --release --no-codesign
 
   Test-Docusaurus-Deployment:
-    name: Test Deployment to https://docs-mobile.talawa.io
+    name: Test docs deployment
     runs-on: ubuntu-latest
     needs: [iOS-Build, Android-Build]
-    # Run only if the develop-postgres branch and not dependabot
     if: ${{ github.actor != 'dependabot[bot]' && github.event.pull_request.base.ref == 'develop-postgres' }}
     steps:
-      - name: Checkout the Repository
-        uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: "20.x"
       - name: Install dependencies
         working-directory: ./docs
         run: npm install
-      - name: Test building the website
+      - name: Build docs
         working-directory: ./docs
         run: npm run build
 
   Validate-Coderabbit:
-    name: Validate CodeRabbit Approval
+    name: Validate CodeRabbit
     runs-on: ubuntu-latest
     if: github.actor != 'dependabot[bot]'
     needs: [Test-Docusaurus-Deployment]
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      - name: Validate CodeRabbit.ai Approval
+      - uses: actions/checkout@v4
+      - name: Validate approval
         run: |
           chmod +x .github/workflows/scripts/validate-coderabbit.sh
           .github/workflows/scripts/validate-coderabbit.sh
@@ -273,50 +291,36 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
 
   Python-Compliance:
-    name: Check Python Code Style
+    name: Python checks
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: 3.11
-
-      - name: Cache pip packages
-        uses: actions/cache@v4
+      - uses: actions/cache@v4
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
       - name: Install dependencies
         run: |
           python3 -m venv venv
           source venv/bin/activate
-          python -m pip install --upgrade pip
           pip install -r .github/workflows/requirements.txt
-
-      - name: Run Black Formatter Check
+      - name: Run Black
         run: |
           source venv/bin/activate
           black --check .
-
-      - name: Run Flake8 Linter
+      - name: Run Flake8
         run: |
           source venv/bin/activate
-          flake8 --docstring-convention google --ignore E402,E722,E203,F401,W503 .github scripts
-
+          flake8 --ignore E402,E722,E203,F401,W503 .github scripts
       - name: Run pydocstyle
         run: |
           source venv/bin/activate
-          pydocstyle --convention=google --add-ignore=D415,D205 .github scripts
-
-      - name: Run docstring compliance check
+          pydocstyle --add-ignore=D415,D205 .github scripts
+      - name: Check docstrings
         run: |
           source venv/bin/activate
           python .github/workflows/scripts/check_docstrings.py --directories .github scripts
+          
